--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,11 @@
     <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
     <meta
       name="description"
-      content="YAHYA NAMIR PORTFOLIO, NAMIR YAHYA PORTFOLIO, namir yahya, yahya namir"
+      content="ASMAA HARITI PORTFOLIO, HARITI ASMAA PORTFOLIO, hariti asmaa, asmaa hariti"
     />
     <meta
       name="keywords"
-      content="YAHYA NAMIR , NAMIR YAHYA, YAHYA NAMIR, YAHYANAMIR, NAMIR PORTOFLIO, NAMIR, YAHYA, yahya namir, yahya-namir, namir-yahya"
+      content="ASMAA HARITI , HARITI ASMAA, ASMAA HARITI, ASMAA HARITI, HARITI PORTOFLIO, HARITI, ASMAA, asmaa HARITI, asmaa-hariti, hariti-asmaa"
     />
     <!-- -------------------- || BOXICONS || --------------------- -->
     <link
